--- a/BarCodeSvannerDemo/Info.plist
+++ b/BarCodeSvannerDemo/Info.plist
@@ -48,7 +48,12 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
-		<dict/>
+		<dict>
+			<key>ean13.info</key>
+			<string></string>
+			<key>NSExceptionAllowsInsecureHTTPLoads</key>
+			<true/>
+		</dict>
 	</dict>
 </dict>
 </plist>
